--- a/src/components/Stack.css
+++ b/src/components/Stack.css
@@ -16,9 +16,10 @@
 }
 
 .container-elements{
-    
+    display: flex;
+    flex-direction: column-reverse;
     border: 1.7px solid rgb(2, 175, 115);
-    background-color: #ffffff;
+    background-color: #f0f0f0;
     width: autox;
     padding: 10px;
 }
@@ -28,5 +29,5 @@
     border-color: rgb(20, 208, 218);
     width: 40px;
     height: 20px;
-    margin: 20px;
+    margin: 10px;
 }
