--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -1,58 +1,90 @@
 .home_container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding: 20px;
-  background-color: #f0f8ff;
-  min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 20px;
+    background-color: #f0f8ff;
+    min-height: 100vh;
+    justify-content: space-between; /* This will push footer to the bottom */
 }
 
-.frame1_home {
-  width: 90%;
-  height:26vh;
-  padding: 20px;
-  margin-bottom: 20px;
-  background-color: #00dbde;
-  background-image: linear-gradient(90deg, #00dbde 0%, #fc00ff 100%);
-
-  color: white;
-  border-radius: 12px;
-  box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2);
-  text-align: center;
-  transition: background 0.5s ease;
+.frame1_home, .frame2_home {
+    width: 90%;
+    height: auto;
+    padding: 20px;
+    margin-bottom: 20px;
+    background-color: #00dbde;
+    background-image: linear-gradient(90deg, #00dbde 0%, #fc00ff 100%);
+    color: white;
+    border-radius: 12px;
+    box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2);
+    text-align: center;
+    transition: background 0.5s ease;
 }
 
 .frame1_home:hover {
     background-color: #00dadead;
     background-image: linear-gradient(90deg, #00DBDE 0%, #fb00ffb2 100%);
-    
 }
 
 .frame2_home {
-  width: 90%;
-  padding: 15px;
-  margin: 10px 0;
-  background-color: #d4e6f1;
-  border-radius: 8px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  transition: background-color 0.3s ease, transform 0.3s ease;
+    padding: 15px;
+    margin: 10px 0;
+    background-color: #d4e6f1;
+    border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    transition: background-color 0.3s ease, transform 0.3s ease;
 }
 
 .frame2_home:hover {
-  background-color: #a9c6e6;
-  transform: scale(1.02);
+    background-color: #a9c6e6;
+    transform: scale(1.02);
 }
 
 .frame2_home h2 {
-  color: #2e86c1;
-  transition: color 0.3s ease;
+    color: #2e86c1;
+    transition: color 0.3s ease;
 }
 
 .frame2_home:hover h2 {
-  color: #1f618d;
+    color: #1f618d;
 }
 
-.home-footer{
-  height: 5rem;
-  background-color: f0f0f0f;
+.home-footer {
+  background-color: #00dbde;
+  background-image: linear-gradient(90deg, #00dbde 0%, #fc00ff 100%);
+  position: relative;
+  width: 100vw;
+  left: 0;
+  padding: 1.5rem 0;
+  text-align: center;
+  margin-top: auto;
+  border-top: 1px solid #dee2e6;
+  color: white;
+}
+
+.footer-content {
+  max-width: 100%;
+  margin: auto;
+}
+
+.footer-content p {
+  margin: 0;
+  font-size: 1rem;
+}
+
+.social-links {
+  margin-top: 0.5rem;
+}
+
+.social-links a {
+  margin: 0 1rem;
+  text-decoration: none;
+  color: white;
+  transition: color 0.3s;
+}
+
+.social-links a:hover {
+  color: #cce5ff;
+  text-decoration: underline;
 }
