--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -77,6 +77,10 @@ nav {
     padding: 0.5rem;
     cursor: pointer;
     font-size: 1.5rem;
+    position: sticky;
+    top: 0;
+    z-index: 1000;
+    width:100%;
   }
 
   .menu-button :hover {
