Queue-Responsive-Done

--- a/src/components/Stack_data.css
+++ b/src/components/Stack_data.css
@@ -44,6 +44,10 @@
     margin-left:1.5rem;
 }
 
+.stack-text-pop img{
+    margin-left: 1.5rem;
+}
+
 .btn-visualize-stack {
     margin-left: 2.3rem;
     display: inline-block;
