--- a/src/components/Queue_data.css
+++ b/src/components/Queue_data.css
@@ -1,27 +1,28 @@
 /* Queue_data.css */
+*{
+  box-sizing: border-box;
+}
+.queue-info{
+  display: flex;
+  text-align: justify;
+  font-size: 1.3rem ;
+  margin: 1.5rem; 
+}
 
 .queueOperation {
   display: flex;
-  align-items: center;
+  padding:1rem ;
   margin: 1.5rem 0;
-  gap: 2rem;
+  justify-content: space-between;
+  gap: 5rem;
 }
 
-.operationDetails {
-  flex: 1;
-  text-align: center;
-}
 
 .operationDetails img {
-  width: 25rem;
+  width: 40rem;
   height: auto;
-
 }
 
-.operationDescription {
-  flex: 2;
-  padding-left: 1rem;
-}
 
 .operationDescription li{
     font-size:1.2rem;
@@ -39,7 +40,7 @@
   border-color: #333;
 }
 
-.btn-visualize {
+.btn-visualize-queue {
   display: inline-block;
   padding: 0.5rem 1rem;
   font-size: 1rem;
@@ -55,7 +56,7 @@
   transition: background-color 0.3s ease, transform 0.2s ease;
 }
 
-.btn-visualize:hover {
+.btn-visualize-queue:hover {
   background-color: #0056b3;
   transform: scale(1.05);
 }
@@ -64,29 +65,32 @@
   text-align: left;
 }
 
-@media (max-width: 48rem) {
+@media (max-width: 768px) {
   .queueOperation {
+    padding: 0;
+    display: flex;
     flex-direction: column;
-    align-items: flex-start;
+    gap: 0;
   }
 
   .operationDetails {
-    text-align: left;
-    margin-bottom: 0.625rem;
     order: 1;
   }
 
   .operationDetails img {
-    width: 25rem;
+    width: 20rem;
     height: auto;
-    margin-left:2rem;
+    margin-left:0.6rem;
   }
   .operationDescription {
-    /* padding-left: 0; */
     order: 2;
   }
-  .btn-visualize {
-    order: 3;
-    /* width:100%; */
+
+  .btn-visualize-queue {
+    width: 100%;
+    text-align: center;
+    margin-left: 0;
+    order:3;
+    
   }
 }
