--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -66,7 +66,17 @@ nav {
   }
 
   .mobile_container {
-    display: block;
+    display: flex;
+    justify-content: space-between;
+  }
+  .mobile-container-logo h2{
+    margin-top: 0;
+  }
+
+  .mobile-container-logo{
+    display: flex;
+    padding-left: 5px;
+    padding-top: 5px;
   }
 
   .menu-button {
@@ -109,7 +119,7 @@ nav {
     display: block;
     width: 100%;
     padding: 0.5rem 0;
-    background-color: black;
+    background-color: rgb(52, 51, 51);
     color: white;
     text-align: center;
     text-decoration: none;
